Nav bug on mobile devices fixed

--- a/public/nav.css
+++ b/public/nav.css
@@ -123,7 +123,7 @@
 
 .borderOut {
     vertical-align: top;
-    width: 8%;
+    width: 0;
     text-align: center;
     background-color: rgb(204, 204, 204);
     border-radius: 1vw;
